DOC:  update publications

--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -526,7 +526,7 @@
     google_result_id = "zDKzLG31cSsJ"
 }
 
-@phdthesis{pifer2019investigation,
+@mastersthesis{pifer2019investigation,
     author = "Pifer, Madeline",
     title = "An Investigation of Neural Mechanisms Underlying Verb Morphology Deficits in Aphasia",
     year = "2019",
@@ -1021,17 +1021,6 @@
     google_result_id = "5mwlgLpxOtQJ"
 }
 
-@article{7HLewNr82EcJ,
-    author = "Kulasingham, Joshua P and Innes-Brown, Hamish and Enqvist, Martin and Alickovic, Emina P",
-    title = "Level Dependent Subcortical {EEG} Responses to Continuous Speech",
-    journal = "bioRxiv",
-    pages = "2024--04",
-    year = "2024",
-    publisher = "Cold Spring Harbor Laboratory",
-    doi = "10.1101/2024.04.01.587607",
-    google_result_id = "7HLewNr82EcJ"
-}
-
 @article{A5xKK--mx_4J,
     author = {Dunagan, Donald and Jordan, Tyson and Hale, John T and Pylkk{\"a}nen, Liina and Chac{\'o}n, Dustin A},
     title = "Rapid visual form-based processing of (some) grammatical features in parallel reading: An {EEG} study in English",
@@ -1290,11 +1279,14 @@
     google_result_id = "agoFXvNQ1z0J"
 }
 
-@article{d_SCnXVsSgQJ,
+@inproceedings{d_SCnXVsSgQJ,
     author = "Antonicelli, Giada and Molinaro, Nicola and De La Riva, Patricia and Laspiur, Raquel and De, Arantza Lopez and Turiso, Maddi Carrera and Mancini, Simona",
     title = "Cortical tracking of prosody after stroke and in aging: preliminary evidence from magnetoencephalography",
-    journal = "???",
+    booktitle = "ISCA Speech Prosody 2024",
+    series = "ISCA",
+    year = "2024",
     url = "https://www.isca-archive.org/speechprosody_2024/antonicelli24_speechprosody.pdf",
+    doi = "10.21437/SpeechProsody.2024",
     google_result_id = "d_SCnXVsSgQJ"
 }
 
@@ -1344,4 +1336,140 @@
     publisher = "Public Library of Science San Francisco, CA USA",
     url = "https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3002622",
     google_result_id = "wl8YmDyxtf0J"
+}
+
+@article{uX8c_LpxGisJ,
+    author = "De Clercq, Pieter and Vanthornhout, Jonas and Vandermosten, Maaike and Francart, Tom",
+    title = "Beyond Linear Neural Envelope Tracking: A Mutual Information Approach",
+    journal = "bioRxiv",
+    year = "2022",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2022.08.11.503600",
+    google_result_id = "uX8c_LpxGisJ"
+}
+
+@article{5JVIwgzFpBEJ,
+    author = "Almgren, Klara and Mentzer, Annie",
+    title = "Neural Speech Tracking in {EEG}: Integrating Acoustics and Linguistics for Hearing Aid Users",
+    year = "2024",
+    journal = "???",
+    url = "https://lup.lub.lu.se/student-papers/record/9174277/file/9174278.pdf",
+    google_result_id = "5JVIwgzFpBEJ"
+}
+
+@article{8OuwINNzo9UJ,
+    author = "Schwartz, Linoy and Hayut, Olga and Levy, Jonathan and Gordon, Ilanit and Feldman, Ruth",
+    title = "Sensitive infant care tunes a frontotemporal interbrain network in adolescence",
+    journal = "Scientific Reports",
+    volume = "14",
+    number = "1",
+    pages = "22602",
+    year = "2024",
+    publisher = "Nature Publishing Group UK London",
+    url = "https://www.nature.com/articles/s41598-024-73630-2",
+    google_result_id = "8OuwINNzo9UJ"
+}
+
+@article{HatMoUJN4a8J,
+    author = "Dunagan, Donald and McLendon, Jill and Jordan, Tyson and Chac{\'o}n, Dustin A",
+    title = "Rapid Parallel Visual Presentation Provides a New Perspective on Relative Clause Processing in Mandarin Chinese",
+    journal = "bioRxiv",
+    pages = "2024--08",
+    year = "2024",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2024.08.13.607840",
+    google_result_id = "HatMoUJN4a8J"
+}
+
+@article{MIbnEplHx5QJ,
+    author = "Slaats, Sophie and Meyer, Antje S and Martin, Andrea E",
+    title = "Lexical surprisal shapes the time course of syntactic structure building",
+    journal = "Neurobiology of Language",
+    pages = "1--39",
+    year = "2024",
+    publisher = "MIT Press 255 Main Street, 9th Floor, Cambridge, Massachusetts 02142, USA\textasciitilde",
+    url = "https://direct.mit.edu/nol/article/doi/10.1162/nol_a_00155/123889",
+    google_result_id = "MIbnEplHx5QJ"
+}
+
+@article{MLZvkmq2XNkJ,
+    author = "Kulasingham, Joshua P and Innes-Brown, Hamish and Enqvist, Martin and Alickovic, Emina",
+    title = "Level-Dependent Subcortical Electroencephalography Responses to Continuous Speech",
+    journal = "eneuro",
+    volume = "11",
+    number = "8",
+    year = "2024",
+    publisher = "Society for Neuroscience",
+    url = "https://www.eneuro.org/content/11/8/ENEURO.0135-24.2024.abstract",
+    google_result_id = "MLZvkmq2XNkJ"
+}
+
+@article{SA7AiPuHrJEJ,
+    author = "Bolt, Elena and Giroud, Nathalie",
+    title = "Neural encoding of linguistic speech cues is unaffected by cognitive decline, but decreases with increasing hearing impairment",
+    journal = "Scientific Reports",
+    volume = "14",
+    number = "1",
+    pages = "19105",
+    year = "2024",
+    publisher = "Nature Publishing Group UK London",
+    url = "https://www.nature.com/articles/s41598-024-69602-1",
+    google_result_id = "SA7AiPuHrJEJ"
+}
+
+@article{Z6UdA96b3qgJ,
+    author = "Gao, Changjiang and Ma, Zhengwu and Chen, Jiajun and Li, Ping and Huang, Shujian and Li, Jixing",
+    title = "Instruction-tuned large language models misalign with natural language comprehension in humans",
+    journal = "bioRxiv",
+    pages = "2024--08",
+    year = "2024",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2024.08.15.608196",
+    google_result_id = "Z6UdA96b3qgJ"
+}
+
+@article{_HP83v4kLyoJ,
+    author = "Guo, Zhe-chen and McHaney, Jacie R and Parthasarathy, Aravindakshan and Chandrasekaran, Bharath",
+    title = "Reduced neural distinctiveness of speech representations in the middle-aged brain",
+    journal = "bioRxiv",
+    pages = "2024--08",
+    year = "2024",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2024.08.28.609778",
+    google_result_id = "_HP83v4kLyoJ"
+}
+
+@article{a3Rs5pXympEJ,
+    author = "Benz, Kaja and Hauswald, Anne and Suess, Nina and Gehmacher, Quirin and Demarchi, Gianpaolo and Schmidt, Fabian and Herzog, Gudrun and Roesch, Sebastian and Weisz, Nathan",
+    title = "Eye Movements in Silent Visual Speech track Unheard Acoustic Signals and Relate to Hearing Experience",
+    journal = "bioRxiv",
+    pages = "2024--09",
+    year = "2024",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2024.09.10.610824",
+    google_result_id = "a3Rs5pXympEJ"
+}
+
+@inproceedings{knGV6RbQoWUJ,
+    author = "Rogachev, Anton and Sysoeva, Olga",
+    title = "Comparison of Acoustic and Syllable Neural Tracking of Natural Speech and Syllable Sequences in Children",
+    booktitle = "2024 Sixth International Conference Neurotechnologies and Neurointerfaces (CNN)",
+    pages = "164--166",
+    year = "2024",
+    organization = "IEEE",
+    journal = "???",
+    url = "https://ieeexplore.ieee.org/abstract/document/10705874/",
+    google_result_id = "knGV6RbQoWUJ"
+}
+
+@article{lCjfPimdE6IJ,
+    author = "Hsu, Chun-Hsien and Cheong, Tong-Hou and Huang, Wen-Jun",
+    title = "Exploring the impact of tonal inventory on speech perception across languages: a study of MMN responses in tonal language speakers",
+    journal = "Frontiers in Psychology",
+    volume = "15",
+    pages = "1394309",
+    year = "2024",
+    publisher = "Frontiers Media SA",
+    url = "https://www.frontiersin.org/journals/psychology/articles/10.3389/fpsyg.2024.1394309/full",
+    google_result_id = "lCjfPimdE6IJ"
 }
