--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -1286,7 +1286,7 @@
     series = "ISCA",
     year = "2024",
     url = "https://www.isca-archive.org/speechprosody_2024/antonicelli24_speechprosody.pdf",
-    doi = "10.21437/SpeechProsody.2024",
+    doi = "10.21437/SpeechProsody.2024-5",
     google_result_id = "d_SCnXVsSgQJ"
 }
 
@@ -1348,11 +1348,11 @@
     google_result_id = "uX8c_LpxGisJ"
 }
 
-@article{5JVIwgzFpBEJ,
+@mastersthesis{5JVIwgzFpBEJ,
     author = "Almgren, Klara and Mentzer, Annie",
     title = "Neural Speech Tracking in {EEG}: Integrating Acoustics and Linguistics for Hearing Aid Users",
     year = "2024",
-    journal = "???",
+    school  = "Lund University",
     url = "https://lup.lub.lu.se/student-papers/record/9174277/file/9174278.pdf",
     google_result_id = "5JVIwgzFpBEJ"
 }
