DOC:  update publications

--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -746,17 +746,6 @@
     google_result_id = "p2rj0jGLdrYJ"
 }
 
-@article{9bdfwPAvY8IJ,
-    author = "Reisinger, Patrick and Gillis, Marlies and Suess, Nina and Vanthornhout, Jonas and Haider, Chandra Leon and Hartmann, Thomas and Hauswald, Anne and Schwarz, Konrad and Francart, Tom and Weisz, Nathan",
-    title = "Neural speech tracking benefit of lip movements predicts behavioral deterioration when the speaker's mouth is occluded",
-    journal = "bioRxiv",
-    pages = "2023--04",
-    year = "2023",
-    publisher = "Cold Spring Harbor Laboratory",
-    doi = "10.1101/2023.04.17.536524",
-    google_result_id = "9bdfwPAvY8IJ"
-}
-
 @inproceedings{CdlM0PaoRKgJ,
     author = "Das, Proloy and Purdon, Patrick L",
     title = "Extracting common oscillatory time-courses from multichannel recordings: Oscillation Component Analysis",
@@ -888,17 +877,6 @@
     google_result_id = "1KMzh56-QbIJ"
 }
 
-@article{3OfOFKNRbCgJ,
-    author = "Das, Proloy and He, Mingjian and Purdon, Patrick L",
-    title = "A dynamic generative model can extract interpretable oscillatory components from multichannel neurophysiological recordings",
-    journal = "bioRxiv",
-    pages = "2023--07",
-    year = "2023",
-    publisher = "Cold Spring Harbor Laboratory",
-    doi = "10.1101/2023.07.26.550594",
-    google_result_id = "3OfOFKNRbCgJ"
-}
-
 @article{JCCLbB4_HV0J,
     author = "Commuri, Vrishab and Kulasingham, Joshua P and Simon, Jonathan Z",
     title = "Cortical Responses Time-Locked to Continuous Speech in the High-Gamma Band Depend on Selective Attention",
@@ -908,17 +886,6 @@
     publisher = "Cold Spring Harbor Laboratory",
     doi = "10.1101/2023.07.20.549567",
     google_result_id = "JCCLbB4_HV0J"
-}
-
-@article{SnFlXj1cS10J,
-    author = "Berto, Martina and Reisinger, Patrick and Ricciardi, Emiliano and Weisz, Nathan and Bottari, Davide",
-    title = "Hemispheric asymmetries in auditory cortex reflect discriminative responses to temporal details or summary statistics of stationary sounds.",
-    journal = "bioRxiv",
-    pages = "2023--08",
-    year = "2023",
-    publisher = "Cold Spring Harbor Laboratory",
-    doi = "10.1101/2023.08.03.551829",
-    google_result_id = "SnFlXj1cS10J"
 }
 
 @article{TuCxI8dXO-MJ,
@@ -965,16 +932,6 @@
     google_result_id = "rAZLgftLyykJ"
 }
 
-@article{Ua13MeR86koJ,
-    author = "Chac{\'o}n, Dustin Alfonso and Pylkkanen, Liina",
-    title = "Disentangling semantic prediction and association in processing filler-gap dependencies: An {MEG} study in English",
-    year = "2023",
-    publisher = "PsyArXiv",
-    journal = "{PsyArXiv}",
-    url = "https://osf.io/preprints/psyarxiv/4h86e/",
-    google_result_id = "Ua13MeR86koJ"
-}
-
 @phdthesis{WTXE6hHPAU8J,
     author = "Verschueren, Eline",
     title = "Objective measurement of speech intelligibility with cochlear implants",
@@ -1008,17 +965,6 @@
     publisher = "Public Library of Science San Francisco, CA USA",
     url = "https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0292316",
     google_result_id = "l5V5RyufG_YJ"
-}
-
-@article{5mwlgLpxOtQJ,
-    author = "Coopmans, Cas W and de Hoop, Helen and Tezcan, Filiz and Hagoort, Peter and Martin, Andrea E",
-    title = "Neural dynamics express syntax in the time domain during natural story listening",
-    journal = "bioRxiv",
-    pages = "2024--03",
-    year = "2024",
-    publisher = "Cold Spring Harbor Laboratory",
-    doi = "10.1101/2024.03.19.585683",
-    google_result_id = "5mwlgLpxOtQJ"
 }
 
 @article{A5xKK--mx_4J,
@@ -1137,17 +1083,6 @@
     google_result_id = "hdwNKWPReRIJ"
 }
 
-@article{jSIhURNnAncJ,
-    author = "Karunathilake, IM Dushyanthi and Brodbeck, Christian and Bhattasali, Shohini and Resnik, Philip and Simon, Jonathan Z",
-    title = "Neural Dynamics of the Processing of Speech Features: Evidence for a Progression of Features from Acoustic to Sentential Processing",
-    journal = "bioRxiv",
-    pages = "2024--02",
-    year = "2024",
-    publisher = "Cold Spring Harbor Laboratory",
-    doi = "10.1101/2024.02.02.578603",
-    google_result_id = "jSIhURNnAncJ"
-}
-
 @article{olMti3AcYE4J,
     author = "Gao, Changjiang and Li, Jixing and Chen, Jiajun and Huang, Shujian",
     title = "Measuring Meaning Composition in the Human Brain with Composition Scores from Large Language Models",
@@ -1202,28 +1137,6 @@
     publisher = "eLife Sciences Publications Limited",
     url = "https://elifesciences.org/articles/85012",
     google_result_id = "xZH5VJ8_UPsJ"
-}
-
-@article{-8UUshK3OykJ,
-    author = "Matar, Suhail and Marantz, Alec",
-    title = "Neural bases of proactive and predictive processing of meaningful sub-word units in speech comprehension",
-    journal = "bioRxiv",
-    pages = "2024--04",
-    year = "2024",
-    publisher = "Cold Spring Harbor Laboratory",
-    doi = "10.1101/2024.04.29.591610",
-    google_result_id = "-8UUshK3OykJ"
-}
-
-@article{CLXrUtHl5n0J,
-    author = "Pirrung, Christopher JH and Singh, Garima and Hogeveen, Jeremy and Quinn, Davin and Cavanagh, James F",
-    title = "Hypoactivation of ventromedial frontal cortex in major depressive disorder: an {MEG} study of the Reward Positivity",
-    journal = "bioRxiv",
-    pages = "2024--04",
-    year = "2024",
-    publisher = "Cold Spring Harbor Laboratory",
-    doi = "10.1101/2024.04.18.590159",
-    google_result_id = "CLXrUtHl5n0J"
 }
 
 @article{oSBcAEsITWYJ,
@@ -1536,4 +1449,236 @@
     school = "New York University",
     url = "https://search.proquest.com/openview/d25a02f983f48e361361dd3c6e30c3b9/1?pq-origsite=gscholar\&cbl=18750\&diss=y",
     google_result_id = "uGVBrgEKKbIJ"
+}
+
+@article{0YWnKw-inA8J,
+    author = "Das, Proloy and He, Mingjian and Purdon, Patrick L",
+    title = "A dynamic generative model can extract interpretable oscillatory components from multichannel neurophysiological recordings",
+    journal = "Elife",
+    volume = "13",
+    pages = "RP97107",
+    year = "2024",
+    publisher = "eLife Sciences Publications Limited",
+    url = "https://elifesciences.org/articles/97107",
+    google_result_id = "0YWnKw-inA8J"
+}
+
+@article{65KffEMfYVkJ,
+    author = {Chac{\'o}n, Dustin A and Pylkk{\"a}nen, Liina},
+    title = "Disentangling semantic prediction and association in processing filler-gap dependencies: An {MEG} study in English",
+    journal = "Language, Cognition and Neuroscience",
+    pages = "1--17",
+    year = "2025",
+    publisher = "Taylor \& Francis",
+    url = "https://www.tandfonline.com/doi/abs/10.1080/23273798.2025.2457976",
+    google_result_id = "65KffEMfYVkJ"
+}
+
+@article{9Ha_8gjT4pQJ,
+    author = "Matar, Suhail and Marantz, Alec",
+    title = "Neural Bases of Proactive and Predictive Processing of Meaningful Subword Units in Speech Comprehension",
+    journal = "Journal of Neuroscience",
+    volume = "45",
+    number = "7",
+    year = "2025",
+    publisher = "Society for Neuroscience",
+    url = "https://www.jneurosci.org/content/45/7/e0781242024.abstract",
+    google_result_id = "9Ha_8gjT4pQJ"
+}
+
+@article{A4fUVj8eYawJ,
+    author = "Xie, Zilong",
+    title = "Subcortical responses to continuous speech under bimodal divided attention",
+    journal = "Journal of Neurophysiology",
+    year = "2025",
+    publisher = "American Physiological Society Rockville, MD",
+    url = "https://journals.physiology.org/doi/abs/10.1152/jn.00039.2025",
+    google_result_id = "A4fUVj8eYawJ"
+}
+
+@article{ADg5JMtNiskJ,
+    author = "Gehmacher, Quirin and Schubert, Juliane and Kaltenmaier, Aaron and Weisz, Nathan and Press, Clare",
+    title = {The" Ocular Response Function" for encoding and decoding oculomotor related neural activity},
+    journal = "bioRxiv",
+    pages = "2024--11",
+    year = "2024",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2024.11.19.624356",
+    google_result_id = "ADg5JMtNiskJ"
+}
+
+@article{EUWQCEa6O2oJ,
+    author = "Guo, Yu-Jyun and Hsieh, I-Hui",
+    title = "Enhanced Delta Band Neural Tracking of Degraded Fundamental Frequency Speech in Noisy Environments",
+    journal = "Journal of Cognitive Neuroscience",
+    pages = "1--22",
+    year = "2025",
+    publisher = "MIT Press 255 Main Street, 9th Floor, Cambridge, Massachusetts 02142, USA\textasciitilde",
+    url = "https://direct.mit.edu/jocn/article/doi/10.1162/jocn_a_02302/127709",
+    google_result_id = "EUWQCEa6O2oJ"
+}
+
+@article{HAU3iD96QRAJ,
+    author = "Messi, Aline-Priscillia and Pylkkanen, Liina",
+    title = "Tracking neural correlates of contextualized meanings with representational similarity analysis",
+    journal = "Journal of Neuroscience",
+    year = "2025",
+    publisher = "Society for Neuroscience",
+    url = "https://www.jneurosci.org/content/early/2025/03/26/JNEUROSCI.0409-24.2025.abstract",
+    google_result_id = "HAU3iD96QRAJ"
+}
+
+@article{L6ZwkLS3Bd0J,
+    author = "Haupt, Thorge and Rosenkranz, Marc and Bleichner, Martin G",
+    title = "Exploring relevant Features for {EEG}-Based Investigation of Sound Perception in Naturalistic Soundscapes",
+    journal = "eneuro",
+    volume = "12",
+    number = "1",
+    year = "2025",
+    publisher = "Society for Neuroscience",
+    url = "https://www.eneuro.org/content/12/1/ENEURO.0287-24.2024.abstract",
+    google_result_id = "L6ZwkLS3Bd0J"
+}
+
+@article{Q-Z0Q6nZ7QQJ,
+    author = "Fisher, Charlie and Karunathilake, IM Dushyanthi and Johns, Michael A and Vance, Allison and Kuchinsky, Stefanie E and Anderson, Samira and Simon, Jonathan Z",
+    title = "Neural and Behavioral Changes in Older Adults from Auditory-Cognitive Training",
+    journal = "bioRxiv",
+    pages = "2025--04",
+    year = "2025",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2025.04.01.646593",
+    google_result_id = "Q-Z0Q6nZ7QQJ"
+}
+
+@article{Qwty11zkv9sJ,
+    author = "De Clercq, Pieter and Kries, Jill and Mehraram, Ramtin and Vanthornhout, Jonas and Francart, Tom and Vandermosten, Maaike",
+    title = "Neural tracking of natural speech: an effective marker for post-stroke aphasia",
+    journal = "Brain Communications",
+    volume = "7",
+    number = "2",
+    pages = "fcaf095",
+    year = "2025",
+    publisher = "Oxford University Press UK",
+    url = "https://academic.oup.com/braincomms/article-pdf/doi/10.1093/braincomms/fcaf095/62362258/fcaf095.pdf",
+    google_result_id = "Qwty11zkv9sJ"
+}
+
+@article{RKQGbFl5JmYJ,
+    author = {Flower, Nigel and Pylkk{\"a}nen, Liina},
+    title = "Cortical Representation of Quantification: The Role of the Left Anterior Temporal Lobe",
+    journal = "Available at SSRN 5188389",
+    url = "https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5188389",
+    google_result_id = "RKQGbFl5JmYJ"
+}
+
+@article{SNYrxebViioJ,
+    author = {Flower, Nigel and Pylkk{\"a}nen, Liina},
+    title = "The Spatiotemporal Dynamics of Bottom--Up and Top--Down Processing during At-a-Glance Reading",
+    journal = "Journal of Neuroscience",
+    volume = "44",
+    number = "48",
+    year = "2024",
+    publisher = "Society for Neuroscience",
+    url = "https://www.jneurosci.org/content/44/48/e0374242024.abstract",
+    google_result_id = "SNYrxebViioJ"
+}
+
+@article{TOvPaokbAlwJ,
+    author = "Pirrung, Christopher JH and Singh, Garima and Hogeveen, Jeremy and Quinn, Davin and Cavanagh, James F",
+    title = "Hypoactivation of the Ventromedial Frontal Cortex in Major Depressive Disorder: A Magnetoencephalography Study of the Reward Positivity",
+    journal = "Biological Psychiatry: Cognitive Neuroscience and Neuroimaging",
+    year = "2024",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S2451902224003380",
+    google_result_id = "TOvPaokbAlwJ"
+}
+
+@article{a1FHWGTtzMQJ,
+    author = "Karunathilake, IM Dushyanthi and Brodbeck, Christian and Bhattasali, Shohini and Resnik, Philip and Simon, Jonathan Z",
+    title = "Neural dynamics of the processing of speech features: evidence for a progression of features from acoustic to sentential processing",
+    journal = "Journal of Neuroscience",
+    year = "2025",
+    publisher = "Society for Neuroscience",
+    url = "https://www.jneurosci.org/content/early/2025/01/13/JNEUROSCI.1143-24.2025.abstract",
+    google_result_id = "a1FHWGTtzMQJ"
+}
+
+@article{bIwKyXLGY5EJ,
+    author = "Coopmans, Cas W and De Hoop, Helen and Tezcan, Filiz and Hagoort, Peter and Martin, Andrea E",
+    title = "Language-specific neural dynamics extend syntax into the time domain",
+    journal = "PLoS biology",
+    volume = "23",
+    number = "1",
+    pages = "e3002968",
+    year = "2025",
+    publisher = "Public Library of Science San Francisco, CA USA",
+    url = "https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3002968",
+    google_result_id = "bIwKyXLGY5EJ"
+}
+
+@article{btRmwDtUjwYJ,
+    author = {Dunagan, Donald and Jordan, Tyson and Hale, John T and Pylkk{\"a}nen, Liina and Chac{\'o}n, Dustin A},
+    title = "Evaluating the timecourses of morpho-orthographic, lexical, and grammatical processing following rapid parallel visual presentation: An {EEG} investigation in English",
+    journal = "Cognition",
+    volume = "257",
+    pages = "106080",
+    year = "2025",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S0010027725000204",
+    google_result_id = "btRmwDtUjwYJ"
+}
+
+@article{f0vZN9bneE4J,
+    author = {Wilroth, Johanna and Alickovic, Emina and Skoglund, Martin A and Signoret, Carine and R{\"o}nnberg, Jerker and Enqvist, Martin},
+    title = "Improving Tracking of Selective Attention in Hearing Aid Users: The Role of Noise Reduction and Nonlinearity Compensation",
+    journal = "eNeuro",
+    year = "2025",
+    publisher = "Society for Neuroscience",
+    url = "https://www.eneuro.org/content/early/2025/01/29/ENEURO.0275-24.2025.abstract",
+    google_result_id = "f0vZN9bneE4J"
+}
+
+@article{jBctPk43_fUJ,
+    author = "Reisinger, Patrick and Gillis, Marlies and Suess, Nina and Vanthornhout, Jonas and Haider, Chandra Leon and Hartmann, Thomas and Hauswald, Anne and Schwarz, Konrad and Francart, Tom and Weisz, Nathan",
+    title = "Neural speech tracking contribution of lip movements predicts behavioral deterioration when the speaker's mouth is occluded",
+    journal = "eneuro",
+    volume = "12",
+    number = "2",
+    year = "2025",
+    publisher = "Society for Neuroscience",
+    url = "https://www.eneuro.org/content/12/2/ENEURO.0368-24.2024.abstract",
+    google_result_id = "jBctPk43_fUJ"
+}
+
+@article{kAbNl-2dYFIJ,
+    author = "Berto, Martina and Reisinger, Patrick and Ricciardi, Emiliano and Weisz, Nathan and Bottari, Davide",
+    title = "Hemispheric asymmetries in the auditory cortex reflect discriminative responses to temporal details or summary statistics of stationary sounds",
+    journal = "Cortex",
+    volume = "184",
+    pages = "79--95",
+    year = "2025",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S0010945224003599",
+    google_result_id = "kAbNl-2dYFIJ"
+}
+
+@article{pvguR0Ndp9cJ,
+    author = "Koller, Dominik P and Hubregtse, Kim and van der Heijden, Anna C and Talamini, Lucia M",
+    title = "Precisely phase-locked acoustic stimuli globally enhance slow oscillations, but depress fast spindles",
+    journal = "bioRxiv",
+    pages = "2025--03",
+    year = "2025",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2025.03.04.639851",
+    google_result_id = "pvguR0Ndp9cJ"
+}
+
+@article{wcwZmotD6coJ,
+    author = "Hong, Chen and Teng, Xiangbin and Li, Yu and Hsu, Shen-Mou and Tsao, Feng-Ming and Wong, Patrick and Feng, Gangyi",
+    title = "Language-specific Tonal Features Drive Speaker-Listener Neural Synchronization",
+    journal = "arXiv preprint arXiv:2503.05211",
+    year = "2025",
+    url = "https://arxiv.org/abs/2503.05211",
+    google_result_id = "wcwZmotD6coJ"
 }
